--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.daemon=true
 # Fabric Properties (Minecraft 1.21.8)
 minecraft_version=1.21.8
 yarn_mappings=1.21.8+build.1
-loader_version=0.16.5
+loader_version=0.16.9
 
 # Mod Properties
 mod_version=1.0.0
@@ -16,11 +16,11 @@ archives_base_name=neomatica
 
 # Dependencies
 # Fabric API para 1.21.8
-fabric_version=0.108.0+1.21.8
+fabric_version=0.136.1+1.21.8
 
-# Litematica (opcional - versiones compatibles con 1.21+)
-litematica_version=0.19.0+1.21
-malilib_version=0.19.0+1.21
+# Litematica (opcional - versiones para 1.21.8)
+litematica_version=0.23.4
+malilib_version=0.25.5
 
 # ModMenu
-modmenu_version=11.0.3
+modmenu_version=12.0.0-beta.1
